# cfd-dlc-js

./: .gitignore  .npmignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  index.d.ts  index.js  jest.config.js  jest.integration.config.js  package-lock.json  package.back  package.json  tsconfig.json  tslint.json
.circleci/: config.yml
addon/: CMakeLists.txt  cfddlcjs_node_addon.cpp  cfddlcjs_node_addon_init.cpp
docs/: _config.yml  index.md  part2.md  part3.md  part4.md  part5.md
docs/assets/css/: style.scss
examples/dlccli/: .gitignore  README.md  index.ts  package.json  tslint.json
examples/dlccli/models/: AcceptMessage.ts  Amount.ts  Contract.ts  DlcParty.ts  MutualClosingMessage.ts  OfferMessage.ts  Oracle.ts  OracleInfo.ts  Outcome.ts  PartyInputs.ts  Payout.ts  SignMessage.ts  Utxo.ts
examples/dlccli/prompts/: Initial.ts  Outcomes.ts
examples/dlccli/scripts/: start_bitcoind.sh  stop_bitcoind.sh
examples/dlccli/types/: bitcoin-core.d.ts
examples/dlccli/utils/: Utils.ts
include/: Makefile.am
include/cfddlcjs/: Makefile.am  Makefile.srclist  cfddlcjs_api_common.h  cfddlcjs_api_json.h  cfddlcjs_common.h  cfddlcjs_struct.h  cfddlcjs_transactions.h
integration_tests/__tests__/: dlctests.spec.ts  docker-entrypoint.sh  elements.conf  start-bitcoind.sh  test_helper.ts  wallet_helper.ts
integration_tests/bitcoind_datadir/: bitcoin.conf
pc/: cfd-dlc-js.pc.in
src/: CMakeLists.txt  cfddlcapi_error_json.cpp  cfddlcapi_error_json.h  cfddlcjs_internal.h  cfddlcjs_json_mapping_api.cpp  cfddlcjs_transactions.cpp  cfddlcjs_utility.cpp
src/autogen/: cfd_dlc_js_api_json_autogen.cpp  cfd_dlc_js_api_json_autogen.h
src/input_json_format/: README.md  cfddlcapi_add_signature_to_fund_tx.json  cfddlcapi_add_signatures_to_cet.json  cfddlcapi_add_signatures_to_mutual_closing_tx.json  cfddlcapi_add_signatures_to_refund_tx.json  cfddlcapi_create_cet.json  cfddlcapi_create_cet_adaptor_signature.json  cfddlcapi_create_cet_adaptor_signatures.json  cfddlcapi_create_closing_transaction.json  cfddlcapi_create_dlc_transactions.json  cfddlcapi_create_fund_transaction.json  cfddlcapi_create_mutual_closing_transaction.json  cfddlcapi_create_penalty_transaction.json  cfddlcapi_create_refund_transaction.json  cfddlcapi_error_base.json  cfddlcapi_get_raw_cet_signature.json  cfddlcapi_get_raw_cet_signatures.json  cfddlcapi_get_raw_fund_tx_signature.json  cfddlcapi_get_raw_mutual_closing_tx_signature.json  cfddlcapi_get_raw_refund_tx_signature.json  cfddlcapi_get_schnorr_public_nonce.json  cfddlcapi_get_schnorr_sign.json  cfddlcapi_schnorr_sign.json  cfddlcapi_sign_cet.json  cfddlcapi_sign_closing_transaction.json  cfddlcapi_sign_fund_transaction.json  cfddlcapi_verify_cet_adaptor_signature.json  cfddlcapi_verify_cet_adaptor_signatures.json  cfddlcapi_verify_cet_signature.json  cfddlcapi_verify_cet_signatures.json  cfddlcapi_verify_fund_tx_signature.json  cfddlcapi_verify_mutual_closing_tx_signature.json  cfddlcapi_verify_refund_tx_signature.json
tools/: autogen.sh  cleanup.sh  generate_json_map_class.js  generate_json_map_class.ts  lint.sh  lint_all.bat  lint_all_quiet.bat  lint_quiet.sh  re-create.sh  run_compatibility_test.sh
wrap_js/: cfd_utils.ts  cfddlc_utils.ts  cfddlcjs_module.js  compatibility_input.json  compatibility_test.ts  models.ts  wallet_utils.ts
wrap_js/__test__/: AddSignatureToFundTransaction.spec.ts  AddSignaturesToCet.spec.ts  AddSignaturesToMutualClosingTx.spec.ts  AddSignaturesToRefundTx.spec.ts  Compatibility.spec.ts  CreateCet.spec.ts  CreateCetAdaptorSignature.spec.ts  CreateCetAdaptorSignatures.spec.ts  CreateClosingTransaction.spec.ts  CreateDlcTransactions.spec.ts  CreateFundTransaction.spec.ts  CreateMutualClosingTransaction.spec.ts  CreatePenaltyTransaction.spec.ts  CreateRefundTransaction.spec.ts  GetRawCetSignature.spec.ts  GetRawCetSignatures.spec.ts  GetRawFundTxSignature.spec.ts  GetRawMutualClosingTxSignature.spec.ts  GetRawRefundTxSignature.spec.ts  GetSchnorrPublicNonce.spec.ts  SchnorrSign.spec.ts  SignCet.spec.ts  SignClosingTransaction.spec.ts  SignFundTransaction.spec.ts  TestCase.ts  TestHelper.ts  VerifyCetAdaptorSignature.spec.ts  VerifyCetAdaptorSignatures.spec.ts  VerifyCetSignature.spec.ts  VerifyCetSignatures.spec.ts  VerifyFundTxSignature.spec.ts  VerifyRefundTxSignature.spec.ts
wrap_js/__test__/data/: TestData.js  TestData.ts  dlc_fee_test.json
